@@ -70,6 +70,8 @@ interface
 - new method SCIPmemccpy() in pub_misc.h and misc.c which copies either a specified number of charcters of a source
   string to a destination string or until it hits a stoping character
 - new method SCIPchgCutoffboundDive() to change the cutoffbound in diving mode
+- added forgotten implementation of SCIPfreeMemorySize(), SCIPfreeMemorySizeNull() in scip.h and BMSfreeMemorySize(),
+  BMSfreeMemorySizeNull() in memory.h
 
 performance improvements:
 - improved scaling of linear constraints, linear constraints with integral variables will now be scale with
